# elaenia

./: .gitignore  FPan.mli  Makefile  README.md  fpan.ml  fpan_driver.ml  fpan_finder.ml  fpan_finder.mli  fpan_finder_fptaylor.ml  fpan_finder_fptaylor.mli  fpan_finder_gappa.ml  fpan_finder_gappa.mli  fperror.ml
acsl/: syntax.md
coq/: Makefile  Sum.v  sum.c
examples/: README.md  notes.md
fp-analysis/: Makefile  dune-project  readme.md
fp-analysis/c/: branch-test-simple.c  branch-test.c  branch-test.spec  divide-by-zero-test.c  failtest.c  simple-array-test.c  simple-array-test.spec  simple-sub-test.c  simple-sub-test.spec  simple-test.c  simple-test.spec  sqrt-test.c  sqrt-test.spec  sum-test.c  test-nan.c  test-nan.spec  test-sbenz.c  test-sbenz.spec  test-sin.c  test-sin.spec  test1.c  test1.spec  test2.c  test3.c  test3.spec
fp-analysis/c/bench/: README.md  determinant3x3.c  determinant3x3.spec  gold.c  gold.spec  kahan_java.c  matmul3x3.c  matmul3x3.spec  newton.c  newton.spec  nmse_3_3_3.c  quaternion.c  rsqrt.c  rsqrt.spec
fp-analysis/c/kalman/: kettle.c  kettle.spec
fp-analysis/c/rosa/: bspline3.spec  carbonGas.spec  cav10.spec  doppler1.spec  jetEngine.spec  predatorPrey.spec  rigidBody2.spec  rosa.c  sqroot.spec  turbine3.spec
fp-analysis/test/: dune
fpan/: Makefile  fpan_driver.ml  fpan_driver.mli
fpcc/: .gitignore  .gitmodules  README.md  package.yaml  setup.sh  stack.yaml
imptofunc/: ImpToFunc.cabal  README.md  package.yaml  stack.yaml
polnomial-semiring-roulette/: polyroulette.patch  (+1 more)
why3/src/: dune  fptaylor.drv  fptaylor.ml
(+206 files in other folders)
