(lang dune 3.7)

(name analyzer)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Anthony Dario")

(maintainers "Anthony Dario")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name analyzer)
 (synopsis "A static analyzer for floating-point error.")
 (depends ocaml dune))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
